# data-access-tool-backend

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose-test.yml  docker-compose.dev.yml  docker-compose.integration.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  environment.yml  pyproject.toml
.github/workflows/: publish-docker.yml  publish-quarto-website.yml  publish-server-image.yml  test.yml
deploy/: deploy
doc/: DEVELOPMENT.md  _quarto.yml  architecture.md  cires_rendezvous_poster.md  dat_nsidc_demo_slides.qmd  developing_with_edd.md  developing_with_edd.qmd  docs.md  edd_sequence_diagram.qmd  envvars.md  getting_started.md  index.qmd  logs.md  project_history.md  releasing.md  testing.md
nginx/: Dockerfile  dat.conf  nginx.conf
scripts/: run_tests.sh
src/: app.py
src/dat_backend/: __init__.py  app.py  constants.py  dev_server.py  get_links.py  reverse_proxy.py
src/dat_backend/routes/: favicon.py  metrics.py  python_script.py  status.py
src/dat_backend/routes/earthdata_download/: auth.py  get_links.py
src/dat_backend/templates/: app_metrics.html.jinja  application_status.html.jinja  edd_auth_callback.html.jinja  edd_auth_session_fail.html.jinja  generic_error.html.jinja  python_script.py
src/templates/: python_script.py
test/: test_api.py  test_python_script_template.py
test/integration/: __init__.py  test_python_script_template.py
test/unit/: search_results_with_s3credentials.json  test_api.py  test_get_links.py  test_metrics.py  test_python_script_template.py
test/unit/test_server_logs/backup/: dat.access.log.1  dat.error.log.1  error.log.1
