[project]
name = "data-access-tool-backend"
version = "1.0.0"
authors = [
  { name = "NSIDC", email = "nsidc@nsidc.org" },
]
description = "Backend services for the data-access-tool"
readme = "README.md"
license.file = "LICENSE"

[tool.vulture]
paths = ["src"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
disable_error_code = ["no-untyped-call"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "dat_backend.*"
disallow_untyped_defs = false
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
  "requests.*",
  "flask_restx.*",
  "flask_cors.*",
]
ignore_missing_imports = true


[too.bumpversion]
current_version = "1.0.0"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "docker-compose.production.yml"
search   = ':v{current_version}'
replace  = ':v{new_version}'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/dat_backend/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
